# kalman-filtering-rs

./: .gitignore  Cargo.toml  out.txt  position-plot.html.tera  position-residual.html.tera  pout.txt  velocity-plot.html.tera  velocity-residual.html.tera
examples/1d_constant_velocity/: main.rs
examples/accelerometer_angle/: main.rs
examples/cannon_projectile/: main.rs
examples/constant/: main.rs
examples/falling/: main.rs
examples/falling_control/: main.rs
examples/falling_with_drag/: main.rs
examples/falling_with_drag2/: main.rs
examples/satellite_positioning/: main.rs
examples/tracking_a_sin_wave/: alternative_non_linear.rs  linear_a_priori.rs  linear_first_order.rs  linear_second_order.rs  main.rs  non_linear.rs  non_linear_a_priori.rs
src/: lib.rs
