[package]
name = "kalman-filtering-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peroxide = "0.33.3"
plotly = { git = "https://github.com/AnBowell/plotly.git", branch = "mesh3d" }
rand = "0.8.5"
rand_distr = "0.4.3"